--- a/sass/_contact.scss
+++ b/sass/_contact.scss
@@ -1,15 +1,23 @@
 $font-contact:"Raleway", sans-serif;
-.contact__container {
+.contact{
     margin: auto;
     width: 1500px;
     height: 956px;
     background-image: url("../Foto2/img_cont.png");
      /* border: 2px solid red; */
        display: flex;
-    flex-direction: column;
     align-self: center;
     align-items:center;
-    
+    justify-content: center;
+
+    .contact__container {
+        width: 1170px;
+        height: 956px;
+        display: flex;
+        flex-direction: column;
+        align-self: center;
+        align-items:center;
+        // border: 2px solid red;
     
     .contact__head {
         margin-top:100px ;
@@ -34,10 +42,10 @@ font-family: $font-contact;
         margin-top: 65px;
         width: 1170px;
         height: 450px; 
-        /* border: 2px solid red; */
+        // border: 2px solid red;
         display:flex;
         justify-content: space-between;
-    }
+    
     .main--form {
         width: 500px;
         height: 450px;
@@ -106,6 +114,7 @@ font-family: $font-contact;
     .main--address span {
         font-weight: 300;  
     }
+}
     .form--submit {
   background-color: #ff6033;
   width: 265px;
@@ -119,11 +128,11 @@ font-family: $font-contact;
   text-align: center;
   cursor: pointer;
   
-    }
+    
     .form--submit:hover {
         transform: scale(1.1);
         transition: transform 0.5s;
-    }
+    }}
     .contact__footer {
         width: 1500px;
         height: 95px;
@@ -164,5 +173,5 @@ margin-right: 165px;
         color:#FF2B58;
         font-weight: bold;
 }
-}
+}}
 }
